--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body{
+    height: 100vh;
+    font-size: 30px;
     font-family: 'Pixelify Sans', sans-serif;
+    background: hsla(139, 70%, 75%, 1);
+    background: linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
+    background: -moz-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
+    background: -webkit-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#95ECB0", endColorstr="#F3F98A", GradientType=1 );
 }
