--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body{
-    height: 100vh;
+   background-color: #93ecae;
+}
+.wrapper{ 
     font-size: 30px;
     font-family: 'Pixelify Sans', sans-serif;
     background: hsla(139, 70%, 75%, 1);
     background: linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
     background: -moz-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
     background: -webkit-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#95ECB0", endColorstr="#F3F98A", GradientType=1 );
 }
 
 h1 span{
@@ -17,5 +18,16 @@ h1 span{
     background: linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
     background: -moz-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
     background: -webkit-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#95ECB0", endColorstr="#F3F98A", GradientType=1 );
+}
+
+#playground{
+    height: 600px;
+    width: 600px;
+    background-color: rgb(71, 71, 71);
+}
+
+button{
+    padding: 200px 0;
+    margin: 40px;
+    max-height: 600px;
 }
