--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body{
     background: -moz-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
     background: -webkit-linear-gradient(90deg, hsla(139, 70%, 75%, 1) 0%, hsla(63, 90%, 76%, 1) 100%);
 }
-
 h1 span{
     text-shadow: 2px 2px 8px white;
     padding: 20px 0;
@@ -21,8 +20,8 @@ h1 span{
 }
 
 #playground{
-    height: 600px;
-    width: 600px;
+    min-height: 600px;
+    min-width: 600px;
     background-color: rgb(71, 71, 71);
 }
 
