add class to css

--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,12 @@ button{
     margin: 40px;
     max-height: 600px;
 }
+.square{
+    border: 2px solid white;
+}
+.active{
+    background: hsla(13, 93%, 67%, 1);
+    background: linear-gradient(90deg, hsla(13, 93%, 67%, 1) 0%, hsla(21, 91%, 73%, 1) 100%);
+    background: -moz-linear-gradient(90deg, hsla(13, 93%, 67%, 1) 0%, hsla(21, 91%, 73%, 1) 100%);
+    background: -webkit-linear-gradient(90deg, hsla(13, 93%, 67%, 1) 0%, hsla(21, 91%, 73%, 1) 100%);
+}
