--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -21,8 +21,8 @@ h1 span{
 
 #playground{
     aspect-ratio: 1/1;
-    min-height: 750px;
-    max-height: 750px;
+    min-height: 600px;
+    max-height: 600px;
     background: hsla(335, 91%, 70%, 1);
     background: linear-gradient(90deg, hsla(335, 91%, 70%, 1) 0%, hsla(49, 89%, 61%, 1) 100%);
     background: -moz-linear-gradient(90deg, hsla(335, 91%, 70%, 1) 0%, hsla(49, 89%, 61%, 1) 100%);
@@ -33,7 +33,7 @@ h1 span{
 }
 
 button{
-    padding: 200px 0;
+    padding: 150px 0;
     margin: 40px;
     max-height: 600px;
 }
@@ -52,6 +52,9 @@ button span.d-block{
     align-items: center;
     justify-content: center;
     flex-grow: 1;
+}
+.square:hover{
+    cursor: crosshair;
 }
 .active{
    background-color: rgb(46, 46, 46);
